[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield"
version = "0.1.0"
description = "CLI tool to detect LLM prompt injection attacks"
requires-python = ">=3.11"
dependencies = ["click"]

[project.scripts]
promptshield = "promptshield.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
